fix: 2nd image for phones too big

--- a/css/style.css
+++ b/css/style.css
@@ -319,10 +319,12 @@ body {
         background-position: center;
         position: relative;
         text-align: center;
+        z-index: 1;
     }
 
     .hero-phone {
-        min-height: 100vh;
+        margin-top: -50px;
+        min-height: 90vh;
         display: flex;
         align-items: center;
         justify-content: center;
